Revert "[🐛] Fix clock text alignment"
This reverts commit e074fab437b5222eb6de03b03ada3f955a78b00c.

--- a/src/style.less
+++ b/src/style.less
@@ -57,6 +57,7 @@ toolbar {
     box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1), 0 0px 10px rgba(0, 0, 0, 0.1);
     height: 40px!important;
     display: flex;
+    align-items: center;
 
     app {
       display: flex;
